# flatcat

./: README.md  flatcat.toml  pyproject.toml
flatcat/: __init__.py  cli.py  config.py  stitcher.py  tree.py
