[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flatcat"
version = "0.1.0"
description = "Flatten a repo's text files into one Markdown file."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
flatcat = "flatcat.cli:main"